--- a/LR_4/1/index.html
+++ b/LR_4/1/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <title>zavd1</title>
-        <!-- Embedded Style Sheet -->
         <style>
             body {
                 background-color: #d5ebfb;
@@ -19,7 +18,6 @@
                 color: #595b5c;
             }
         </style>
-        <!-- Link to External Style Sheet -->
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
@@ -30,7 +28,7 @@
         <p>Ось деякі рекомендації з використання заголовків в HTML-сторінці.</p>
         
         <h3>1.1.1 Використання заголовка h1</h3>
-        <p>Якщо в розмітці не використовуються теги <section> чи <article>, то не рекомендується, щоб на одній сторінці містилось декілька заголовків верхнього рівня. Всередині тегів <section> і <article> може бути своя ієрархія заголовків.</p>
+        <p>Якщо в розмітці не використовуються теги section чи article, то не рекомендується, щоб на одній сторінці містилось декілька заголовків верхнього рівня. Всередині тегів section і article може бути своя ієрархія заголовків.</p>
         
         <h3>1.1.2 Використання підзаголовків (h2-h6)</h3>
         <p>При використанні підзаголовків не рекомендується пропускати рівні заголовків, тобто після заголовка h1 повинен йти підзаголовок h2 і тільки потім підзаголовок h3.</p>
